<resources>
    <string name="app_name">Gym365</string>
    <string name="title_activity_category_exercise">Gym 365</string>
    <string name="title_activity_second">Edit Note</string>


    <string name="no_notes">No Notes Yet</string>
    <string name="menu_insert">Add Note</string>
    <string name="menu_about">About</string>
    <string name="menu_delete">Delete Note</string>
    <string name="name">Agrega el nombre de la tabla</string>
    <string name="body">Inserte los subtitulos</string>
    <string name="day">Inserte los dias que quiera hacer la tabla</string>
    <string name="confirm">Confirm</string>
    <string name="edit_note">Edit Note</string>


    <string name="text">Bienvenido</string>

    <string name="button1">Tablas</string>
    <string name="button2">Calendario</string>
    <string name="button3">Ejercicios</string>
    <string name="button4">Rutas</string>

    <string name="pecho">Pecho</string>
    <string name="piernas">Piernas</string>
    <string name="cardio">Cardio</string>
    <string name="espalda">Espalda</string>
    <string name="biceps">Biceps</string>
    <string name="hombro">Hombro</string>
    <string name="triceps">Triceps</string>
    <string name="abdominal">Abdominal</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_about">About</string>


    <string name="date_table">Dia</string>

    <string name="category"></string>

    <string name="addExercise">Añade ejercicios a la tabla</string>

</resources>
