<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/nombre_tabla"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:text="@string/body" />


    <EditText
        android:id="@+id/subtitulo_tabla"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:text="@string/day" />


    <EditText
        android:id="@+id/dia_tabla"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/borde_redondo"
        android:hint="@string/addExercise"
        android:layout_gravity="center"
        android:onClick="addExercise"
        android:layout_marginTop="100dp"/>

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveTable"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/confirm" />

</LinearLayout>
