<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="70dp"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde_redondo"
            android:backgroundTint="@color/colorPrimary"
            android:drawableLeft="@drawable/pecho_icono"
            android:paddingLeft="15dp"
            android:text="@string/pecho"
            android:onClick="clickPecho" />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/borde_redondo"
            android:backgroundTint="@color/colorPrimary"
            android:drawableLeft="@drawable/pierna_icono"
            android:paddingLeft="15dp"
            android:text="@string/piernas"
            android:onClick="clickPiernas"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/borde_redondo"
            android:backgroundTint="@color/colorPrimary"
            android:drawableLeft="@drawable/espalda_icono"
            android:paddingLeft="15dp"
            android:text="@string/espalda"
            android:onClick="clickEspalda"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/borde_redondo"
            android:backgroundTint="@color/colorPrimary"
            android:drawableLeft="@drawable/cardio_icono"
            android:paddingLeft="15dp"
            android:text="@string/cardio"
            android:onClick="clickCardio" />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/borde_redondo"
            android:backgroundTint="@color/colorPrimary"
            android:drawableLeft="@drawable/brazos_icono"
            android:paddingLeft="15dp"
            android:text="@string/biceps"
            android:onClick="clickBiceps" />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/borde_redondo"
            android:backgroundTint="@color/colorPrimary"
            android:drawableLeft="@drawable/hombro_icono"
            android:paddingLeft="15dp"
            android:text="@string/hombro"
            android:onClick="clickHombro" />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/borde_redondo"
            android:backgroundTint="@color/colorPrimary"
            android:drawableLeft="@drawable/brazos_icono"
            android:paddingLeft="15dp"
            android:text="@string/triceps"
            android:onClick="clickTriceps" />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/borde_redondo"
            android:backgroundTint="@color/colorPrimary"
            android:drawableLeft="@drawable/abdominal_icono"
            android:paddingLeft="15dp"
            android:text="@string/abdominal"
            android:onClick="clickAbdominal" />

    </LinearLayout>

</LinearLayout>